2008-05-08  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.9 released.

2008-03-30  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (sh-script): Require sh-script, in order to
	quieten the byte-compiler.
	(ebuild-mode, eselect-mode): Call make-local-hook only for XEmacs.
	(ebuild-mode-get-keywords): Don't use match-string-no-properties
	since the function doesn't exist in XEmacs 21.4.

2008-02-24  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-arch-stable-list)
	(ebuild-mode-arch-list): Move mips to unstable, remove ppc-macos.

2008-02-21  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-pam):
	Change "pamd_mimic_system" in "pamd_mimic".

2007-12-15  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.8 released.

2007-11-26  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-run-echangelog): Fix bug that the
	default directory was still the one from the previous command.

2007-11-24  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el, eselect-mode-keywords.el:
	New files, split off from gentoo-syntax.el.
	* Makefile (DISTFILES): Add new files.

	* gentoo-syntax.el: Move keyword lists to new files and load them.
	(ebuild-mode-keyword): Ask first for the action, then for the
	architecture. Suggestion by Flameeyes.
	(ebuild-run-echangelog): New function, support for echangelog.

2007-11-17  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-run-command): Bug fix, use
	ebuild-commands-list instead of alist.
	(ebuild-mode-keyword, ebuild-mode-ekeyword-complete)
	(ebuild-mode-ekeyword): New functions, rewritten user interface.
	(ebuild-mode-map): Keybindings adapted accordingly.
	(ebuild-mode-keyword-stable, ebuild-mode-keyword-unstable)
	(ebuild-mode-keyword-mask, ebuild-mode-keyword-drop):
	Functions removed.

2007-11-11  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-get-keywords)
	(ebuild-mode-put-keywords, ebuild-mode-sort-keywords)